<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#18453B"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Input Fields Container -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Name Field -->
                <EditText
                    android:id="@+id/etName"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"/>

                <Space android:layout_width="1dp" android:layout_height="12dp"/>

                <!-- Email Field -->
                <EditText
                    android:id="@+id/etEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"/>

                <Space android:layout_width="1dp" android:layout_height="12dp"/>

                <!-- Password Field -->
                <EditText
                    android:id="@+id/etPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"/>

                <Space android:layout_width="1dp" android:layout_height="12dp"/>

                <!-- Confirm Password Field -->
                <EditText
                    android:id="@+id/etConfirm"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"/>

                <Space android:layout_width="1dp" android:layout_height="16dp"/>

                <!-- Sign Up Field -->
                <Button
                    android:id="@+id/btnSignUp"
                    android:text="@string/sign_up"
                    android:backgroundTint="@color/MSU"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Back Button -->
        <TextView
            android:id="@+id/tvGoToLogin"

            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
